...
    "Confirm new password" : {

    },
    "Confirm New Password" : {

    },
    "Confirm Password" : {
      "comment" : "Label for the confirmation password field in the reset password form.",
      "isCommentAutoGenerated" : true
    },
    "Connect to %@" : {

    },
...

    },
    "Defense" : {
      "comment" : "\"Rebounds\" is a generic term for the points a",
      "isCommentAutoGenerated" : true
    },
    "Delete" : {

    },
    "Delete \"%@\"? This cannot be undone." : {

    },
    "Delete %@" : {
...
      "isCommentAutoGenerated" : true
    },
    "Discus" : {
      "comment" : "Display name of the `discus` metric.",
      "isCommentAutoGenerated" : true
    },
    "Dismiss" : {

    },
    "Dismiss data point details" : {
      "comment" : "A button that dismisses the details of a data point.",
      "isCommentAutoGenerated" : true
    },
...

    },
    "Elite Prospects" : {
      "comment" : "Name of the Elite Prospects service.",
      "isCommentAutoGenerated" : true
    },
    "Email" : {

    },
    "Email %@" : {
      "comment" : "A label for the accessibility of the email button. The argument is the coach's full name.",
      "isCommentAutoGenerated" : true
    },
...
    "Follow-ups" : {

    },
    "For your security, we signed you out after a period of inactivity. Log back in to continue." : {

    },
    "Forgot password" : {
      "comment" : "A button that opens a screen for password recovery.",
      "isCommentAutoGenerated" : true
    },
    "Forgot password?" : {

    },
...

    },
    "New Email Address" : {
      "comment" : "A label for the user to enter a new email address.",
      "isCommentAutoGenerated" : true
    },
    "New Password" : {

    },
    "New Password (min 8 characters)" : {
      "comment" : "A label for the new password field, indicating that it must be at least 8 characters long.",
      "isCommentAutoGenerated" : true
    },
...
    "Reset notification preferences to defaults" : {

    },
    "Reset password" : {

    },
    "Reset Password" : {

    },
    "Reset to Defaults" : {

    },
    "Resets calculator to original offer values" : {
...
    "SAT Score" : {

    },
    "SAT Score (Optional)" : {

    },
    "Save" : {
      "comment" : "The label of a button that saves changes to a coach.",
      "isCommentAutoGenerated" : true
    },
    "Save %" : {
      "comment" : "Save percentage metric.",
      "isCommentAutoGenerated" : true
...
      "comment" : "A label for a picker that lets the user select a school.",
      "isCommentAutoGenerated" : true
    },
    "School Preferences" : {

    },
    "School Size" : {

    },
    "School Status" : {

    },
    "School Status Changes" : {
...
      "comment" : "A button that sends a message.",
      "isCommentAutoGenerated" : true
    },
    "Send Message" : {

    },
    "Send password reset link" : {

    },
    "Send Profile" : {
      "comment" : "A button that sends a coach's profile.",
      "isCommentAutoGenerated" : true
    },
...
    "Sign in to account" : {

    },
    "Sign in to existing account" : {

    },
    "Sign in to your account" : {
      "comment" : "A hint for the user to enter their email and password when signing in.",
      "isCommentAutoGenerated" : true
    },
    "Sign in with Face ID" : {
      "comment" : "A title for the biometric lock screen.",
      "isCommentAutoGenerated" : true
...
